Update component /ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -13,6 +13,14 @@
                 "element": {"#": "main"}
             }
         },
+        "material": {
+            "prototype": "mjs-volume/runtime/material",
+            "properties": {
+                "id": "_1",
+                "image": "alternative.jpg",
+                "scene": {"@": "scene"}
+            }
+        },
         "montageVersion": {
             "prototype": "ui/version.reel",
             "properties": {
