Update component /ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -13,6 +13,14 @@
                 "element": {"#": "main"}
             }
         },
+        "button2": {
+            "prototype": "digit/ui/button.reel",
+            "properties": {
+                "element": {"#": "button2"},
+                "enabled": true,
+                "label": "Button"
+            }
+        },
         "montageVersion": {
             "prototype": "ui/version.reel",
             "properties": {
@@ -26,6 +34,7 @@
     <div data-montage-id="main" data-montage-skin="light" class="Main">
         <div data-montage-id="montageVersion"></div>
         <button data-montage-id="button"></button>
+        <button data-montage-id="button2"></button>
     </div>
 </body>
 </html>
