--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -13,6 +13,14 @@
                 "element": {"#": "main"}
             }
         },
+        "button4": {
+            "prototype": "digit/ui/button.reel",
+            "properties": {
+                "element": {"#": "button4"},
+                "enabled": true,
+                "label": "Button"
+            }
+        },
         "montageVersion": {
             "prototype": "ui/version.reel",
             "properties": {
@@ -28,6 +36,7 @@
         <button data-montage-id="button"></button>
         <button data-montage-id="button2"></button>
         <button data-montage-id="button3"></button>
+        <button data-montage-id="button4"></button>
     </div>
 </body>
 </html>
