--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -18,8 +18,7 @@
             "properties": {
                 "element": {"#": "button5"},
                 "enabled": true,
-                "label": "Button"
-            }
+                "label": "Butt
         },
         "montageVersion": {
             "prototype": "ui/version.reel",
