--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -18,7 +18,8 @@
             "properties": {
                 "element": {"#": "button5"},
                 "enabled": true,
-                "label": "Butt
+                "label": "Butto
+            }
         },
         "montageVersion": {
             "prototype": "ui/version.reel",
