--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -18,7 +18,8 @@
             "properties": {
                 "element": {"#": "button5"},
                 "enabled": true,
-                "label": "Button"
+                "label": "Button",
+                "l": 3
             }
         },
         "montageVersion": {
