Update component /ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -13,6 +13,14 @@
                 "element": {"#": "main"}
             }
         },
+        "button7": {
+            "prototype": "digit/ui/button.reel",
+            "properties": {
+                "element": {"#": "button7"},
+                "enabled": true,
+                "label": "Button"
+            }
+        },
         "montageVersion": {
             "prototype": "ui/version.reel",
             "properties": {
@@ -31,6 +39,7 @@
         <button data-montage-id="button4"></button>
         <button data-montage-id="button5"></button>
         <button data-montage-id="button6"></button>
+        <button data-montage-id="button7"></button>
     </div>
 </body>
 </html>
