--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -13,10 +13,10 @@
                 "element": {"#": "main"}
             }
         },
-        "button10": {
+        "button11": {
             "prototype": "digit/ui/button.reel",
             "properties": {
-                "element": {"#": "button10"},
+                "element": {"#": "button11"},
                 "enabled": true,
                 "label": "Button"
             }
@@ -24,7 +24,8 @@
         "montageVersion": {
             "prototype": "ui/version.reel",
             "properties": {
-                "element": {"#": "montageVersion"}
+                "element": {"#": "montageVersion"},
+                "l": 2
             }
         }
     }
@@ -43,6 +44,7 @@
         <button data-montage-id="button8"></button>
         <button data-montage-id="button9"></button>
         <button data-montage-id="button10"></button>
+        <button data-montage-id="button11"></button>
     </div>
 </body>
 </html>
